--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-markdown": "^2.7",
         "spatie/laravel-permission": "^6.17"
     },
     "require-dev": {
