--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=clb
+DB_USERNAME=root
+DB_PASSWORD=Sqrtfl0@t01
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,7 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=466977898784-nc5q84gf17iann7dal6uddbnf90se57j.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT=http://127.0.0.1:8000/auth/google/callback
+
+DEFAULT_AVATAR=https://i.pinimg.com/736x/0c/d2/22/0cd22274103a2dbe80cf7de876698409.jpg
