--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,6 @@ GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT=http://127.0.0.1:8000/auth/google/callback
 
 DEFAULT_AVATAR=https://i.pinimg.com/736x/0c/d2/22/0cd22274103a2dbe80cf7de876698409.jpg
+
+GEMINI_API_KEY=
+FACEBOOK_ACCESS_TOKEN=
